fix: 🐛 header overlapped with icon in Special:Contribs

--- a/skinStyles/ooui/oojs-ui-widgets.less
+++ b/skinStyles/ooui/oojs-ui-widgets.less
@@ -344,16 +344,20 @@
 // Fix Special:Contribs
 .mw-collapsibleFieldsetLayout {
 	&.mw-collapsible {
-		.mw-collapsible-toggle .oo-ui-iconElement-icon {
-			position: absolute;
-			top: 0;
-			left: 0;
-			width: 1.14285714em;
-			min-width: 16px;
-			margin-right: 0.5em;
-		}
-
 		.mw-collapsible-toggle {
+			.oo-ui-iconElement-icon {
+				position: absolute;
+				top: 0;
+				left: 0;
+				width: 1.14285714em;
+				min-width: 16px;
+				margin-right: 0.5em;
+			}
+
+			.oo-ui-fieldsetLayout-header {
+				padding-left: 1.71428571em;
+			}
+
 			.oo-ui-icon-collapse {
 				display: inline-block;
 			}
